instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:3: error: not found: type blue
setCouleurBrosse(c:blue)
                   ^InstructionsDrawG:3: error: not found: value c
setCouleurBrosse(c:blue)
                 ^